[tool.poetry]
name = "trusttune"
version = "0.1.0"
description = "Production-Ready ML Score Calibration Automation Tool"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "trusttune"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
scipy = "^1.10.0"
scikit-learn = "^1.3.0"
pandas = "^2.0.0"
torch = "^2.0.0"
fastapi = "^0.100.0"
pydantic = "^2.0.0"
mlflow = "^2.7.0"
prometheus-client = "^0.17.0"
betacal = "^0.2.3"
netcal = "^1.3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3 