[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trusttune"
version = "0.1.0"
description = "A library for calibrating machine learning models"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "fastapi>=0.68.0",
]

[project.optional-dependencies]
monitoring = [
    "psutil>=5.8.0",
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
scipy = "^1.10.0"
scikit-learn = "^1.3.0"
pandas = "^2.0.0"
torch = "^2.0.0"
fastapi = "^0.100.0"
pydantic = "^2.0.0"
mlflow = "^2.7.0"
prometheus-client = "^0.17.0"
betacal = "^0.2.3"
netcal = "^1.3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.0"
pytest-cov = "^4.1.0"
httpx = "^0.24.0"

[tool.setuptools]
packages = ["trusttune"]
package-dir = {"" = "."}
